--- a/product_cart.html
+++ b/product_cart.html
@@ -2,7 +2,13 @@
 <html>
 
 <head>
-  <title>Ka pao</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Kapao</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+    integrity="sha512-9tf1bF6XeuuKJ5//Wwx8u/4d38VvgYXx7qO9OU8G1m4lk+Rx3HnrI4xf9JRDLYEspeBkyNYnCmzHxAgN+41B5A=="
+    crossorigin="anonymous" />
+
+
   <style>
     .delete-button-after {
       float: right;
@@ -19,7 +25,7 @@
   <header class="flex flex-wrap sm:justify-start sm:flex-nowrap w-full bg-white text-sm py-4 dark:bg-gray-800">
     <nav class="max-w-[85rem] w-full mx-auto px-4 flex flex-wrap basis-full items-center justify-between"
       aria-label="Global">
-      <a class="sm:order-1 flex-none text-xl font-semibold dark:text-white" href="#">Ka pao</a>
+      <a class="sm:order-1 flex-none text-xl font-semibold dark:text-white" href="#">โครตกระเพรา</a>
       <div class="sm:order-3 flex items-center gap-x-2">
         <button type="button"
           class="sm:hidden hs-collapse-toggle p-2.5 inline-flex justify-center items-center gap-x-2 rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-transparent dark:border-gray-700 dark:text-white dark:hover:bg-white/10 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
@@ -193,7 +199,7 @@
     <div
       class="product relative p-5 text-center  flex w-full max-w-xs flex-col overflow-hidden rounded-lg border border-gray-100 bg-white shadow-md">
       <img src="img/p-7.png" alt="Product 7"class="rounded-xl	">
-      <span class="absolute top-0 left-0 m-2 rounded-full bg-black px-2 text-center text-sm font-medium text-white">15%
+      <span class="absolute top-0 left-0 m-2 rounded-full bg-black px-2 text-center text-sm font-medium text-white">10%
         OFF</span>
       <h3 class=" flex flex-row margin-left">ผัดกะเพราไข่เยี่ยวม้าหมูสับ</h3>
       <div class="mt-2 mb-5 flex items-center justify-between">
@@ -339,6 +345,9 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://rawgit.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"
+    integrity="sha512-6dLNXDsb0Orc5JbPnnhz9RA9rCw3ujvmoB3glQRgPtnV4lVw4TSVwFm0JAR7fzD6+wcQwYcBuYohbeLX5bNKkA=="
+    crossorigin="anonymous"></script>
 
 
 </body>
